# Claude-Game

./: .gitignore  ALBION_PARITY_CHECKLIST.md  ARCHITECTURE.md  ASSET_CREDITS.md  CMakeLists.txt  CMakePresets.json  CODEX_HANDOFF.md  CODEX_PROGRESS.md  CODEX_REVIEW.md  DESIGN-BIBLE.md  GOALS.md  HANDOFF.md  MASTER_ROADMAP.md  NEXT_STEPS_FOR_CHATGPT.txt  ONLINE_SERVERS.md  PHASE1_AUDIT.md  PHASE2_REPORT.md  PORTING.md  PROGRESS.md  README.md  ROADMAP.md  TASKS.md  VISUAL_DIRECTION.md  claude_handoff.txt  claude_status.txt  game.js  game3d.js  gloamwood-visuals.js  graphics-settings.js  index.html  run_linux.sh  run_macos.sh  run_windows.bat  styles.css  vcpkg.json
.github/workflows/: build.yml
assets/models/: wayfarer.glb
captures/: Zion-presentation-overhaul.webm  profile-results.json  validation.json
captures/correction-pass/: validation.json
captures/gloamwood-vertical-slice/: validation.json
captures/phase2-native-resolution/: benchmark-results.json  validation.json
config/: movement.cfg  server.cfg
server/: README.md
server/content/entities/: barrel.cfg  crate.cfg  duel_bot.cfg  glock.cfg  karambit.cfg  minics_bot.cfg  neon_pillar.cfg  shield.cfg  sword.cfg  training_dummy.cfg
server/content/sounds/: CREDITS.md
server/content/weapons/: fists.cfg  glock.cfg  karambit.cfg  sword.cfg
src/: config.cpp  config.h  debug_text.cpp  debug_text.h  gl_loader.cpp  gl_loader.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  world.cpp
src/audio/: audio.cpp  audio.h
src/client/: game.cpp  game.h  main.cpp  settings.cpp  settings.h
src/client/platform/: audio.h  filesystem.h  input.h  platform.h  window.h
src/client/platform/sdl/: sdl_audio.cpp  sdl_audio.h  sdl_filesystem.cpp  sdl_filesystem.h  sdl_input.cpp  sdl_input.h  sdl_platform.cpp  sdl_platform.h  sdl_window.cpp  sdl_window.h
src/client/renderer/: render_types.h  renderer.h  renderer_factory.cpp
src/client/renderer/common/: font5x7.cpp
src/client/renderer/metal/: metal_renderer.cpp  metal_renderer.h
src/client/renderer/mobile/: gles_renderer.cpp  gles_renderer.h
src/client/renderer/opengl/: gl_loader.cpp  gl_loader.h  gl_renderer.cpp  gl_renderer.h
src/client/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h
src/core/: app.cpp  app.h  clock.h  log.cpp  log.h  mathx.h  paths.cpp  paths.h  rng.h
src/dev/: dev_tools.cpp  dev_tools.h
src/engine/: config.cpp  config.h  log.cpp
src/fx/: particles.cpp  particles.h
src/game/: game.cpp  game.h  menus.cpp  menus.h  player.cpp  player.h  world.cpp  world.h
src/input/: input.cpp  input.h
src/platform/: audio.h  filesystem.h  graphics_api.h  input.h  platform.h  window.h
src/platform/sdl/: sdl_audio.cpp  sdl_audio.h  sdl_filesystem.cpp  sdl_filesystem.h  sdl_input.cpp  sdl_input.h  sdl_platform.cpp  sdl_platform.h  sdl_window.cpp  sdl_window.h
src/player/: camera_rig.cpp  camera_rig.h  controller.cpp  controller.h
src/render/: lighting.cpp  lighting.h  postfx.cpp  postfx.h  renderer.cpp  renderer.h  sky.cpp  sky.h
src/renderer/: render_types.h  renderer.h  renderer_factory.cpp
src/renderer/common/: font5x7.cpp  font5x7.h
src/renderer/metal/: metal_renderer.cpp  metal_renderer.h
src/renderer/mobile/: gles_renderer.cpp  gles_renderer.h
src/renderer/opengl/: gl_loader.cpp  gl_renderer.cpp  gl_renderer.h
src/renderer/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h
src/save/: save.cpp  save.h
src/server/: dedicated_server.cpp  dedicated_server.h  main.cpp
src/settings/: settings.cpp  settings.h
src/shared/: config.cpp  config.h  content.cpp  content.h  content_loader.cpp  content_loader.h  crafting.cpp  crafting.h  game_mode.cpp  game_mode.h  inventory.h  items.cpp  items.h  log.cpp  log.h  melee.cpp  melee.h  player.cpp  player.h  protocol.h  world.cpp  world.h  world_save.cpp  world_save.h  world_template.cpp  world_template.h
src/ui/: hud.cpp  hud.h  ui.cpp  ui.h
src/world/: day_night.cpp  day_night.h  interact.cpp  interact.h  spatial_grid.h  terrain.cpp  terrain.h  world.cpp  world.h
src/zone/: zone_def.h  zone_instance.h  zone_manager.cpp  zone_manager.h  zone_registry.cpp
tools/: gen_wayfarer.py  gen_wayfarer_rounded_wip.py  generate_sounds.cpp  gpu-diagnostics.mjs  make_test_recording.py  zion-benchmark.mjs  zion-capture.mjs  zion-phase2-validate.mjs  zion-validate.mjs
